<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ChoixMatch">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Serveur"
        android:id="@+id/tvServeur"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:gravity="left|center_vertical"
        android:layout_alignBottom="@+id/buTrouverPartie" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAdresseIP"
        android:layout_alignTop="@+id/buTrouverPartie"
        android:layout_alignBottom="@+id/buTrouverPartie"
        android:layout_toRightOf="@id/tvServeur"
        android:layout_toLeftOf="@id/buTrouverPartie"
        android:layout_alignParentTop="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TrouverPartie"
        android:id="@+id/buTrouverPartie"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie1"
        android:id="@+id/buPartie1"
        android:layout_below="@+id/tvServeur"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/buTrouverPartie"
        android:onClick="onClick"
        android:enabled="false"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie2"
        android:id="@+id/buPartie2"
        android:layout_below="@+id/buPartie1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie3"
        android:id="@+id/buPartie3"
        android:layout_below="@+id/buPartie2"
        android:layout_alignEnd="@+id/buPartie2"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie4"
        android:id="@+id/buPartie4"
        android:layout_below="@+id/buPartie3"
        android:layout_alignEnd="@+id/buPartie3"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie5"
        android:id="@+id/buPartie5"
        android:onClick="onClick"
        android:layout_below="@+id/buPartie4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie6"
        android:id="@+id/buPartie6"
        android:layout_below="@+id/buPartie5"
        android:layout_alignEnd="@+id/buPartie5"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie7"
        android:id="@+id/buPartie7"
        android:layout_below="@+id/buPartie6"
        android:layout_alignEnd="@+id/buPartie6"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie8"
        android:id="@+id/buPartie8"
        android:layout_below="@+id/buPartie7"
        android:layout_alignEnd="@+id/buPartie7"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie9"
        android:id="@+id/buPartie9"
        android:layout_below="@+id/buPartie8"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partie10"
        android:id="@+id/buPartie10"
        android:onClick="onClick"
        android:layout_below="@+id/buPartie9"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/buPartie9"
        android:enabled="false" />

</RelativeLayout>
