<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.sils.hockeynitelive.PartieDetails">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PdEquipeVisiteurPoints"
        android:id="@+id/tvPdEquipeVisiteurPoints"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignLeft="@+id/textView2"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PdEquipeLocalePoints"
        android:id="@+id/tvPdEquipeLocalePoints"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignRight="@+id/textView" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PdPeriode"
        android:id="@+id/tvPdPeriode"
        android:layout_below="@+id/tvPdEquipeLocalePoints"
        android:layout_alignEnd="@+id/tvPdEquipeLocalePoints"
        android:layout_alignLeft="@+id/tvPdEquipeLocalePoints" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PdTempsRestant"
        android:id="@+id/tvPdTempsRestant"
        android:textAlignment="textEnd"
        android:layout_below="@+id/tvPdEquipeVisiteurPoints"
        android:layout_alignStart="@+id/tvPdEquipeVisiteurPoints"
        android:layout_alignRight="@+id/tvPdEquipeVisiteurPoints"
        android:layout_alignBaseline="@+id/tvPdPeriode" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoutonPari"
        android:id="@+id/buPdPari"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PdResulatPari"
        android:id="@+id/tvPdPariResultat"
        android:layout_above="@+id/buPdPari"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/buPdPari" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PdRafraichir"
        android:id="@+id/buPdRafraichir"
        android:layout_above="@+id/tvPdPariResultat"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Team A"
        android:id="@+id/textView"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Team B"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="VS"
        android:id="@+id/textView4"
        android:textStyle="italic"
        android:textColor="#ff0000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="-"
        android:id="@+id/textView5"
        android:textStyle="italic"
        android:textColor="#ff0000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView4" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listEvent"
        android:layout_below="@+id/tvPdPeriode"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/buPdRafraichir"
        android:layout_alignParentEnd="false" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_centerInParent="true" />
</RelativeLayout>
